--- a/public/asset/css/dashboard.css
+++ b/public/asset/css/dashboard.css
@@ -67,7 +67,7 @@ body {
 .navbar-brand {
   padding-top: .75rem;
   padding-bottom: .75rem;
-  background-color: rgba(0, 0, 0, .25);
+  background-color: rgba(35, 49, 112, 0.25);
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
 }
 
@@ -82,11 +82,11 @@ body {
 
 .form-control-dark {
   color: #fff;
-  background-color: rgba(255, 255, 255, .1);
+  background-color: rgba(255, 255, 255, 0.1);
   border-color: rgba(255, 255, 255, .1);
 }
 
 .form-control-dark:focus {
   border-color: transparent;
-  box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
+  box-shadow: 0 0 0 3px rgba(62, 65, 99, 0.25);
 }
